# fabula-fr

./: README.md  __init__.py  arc.py  download  main.py  plot.py  pyproject.toml  schemas.py  tartarin.txt
src/: __init__.py  arc.py  core.py  main.py  segment.py
src/fabula/: __init__.py  arc.py  cli.py  core.py  schemas.py  scorer.py  segment.py
tests/: test_arc.py  test_core.py  test_segment.py
