[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fabula-fr"
version = "0.1.3"
description = "Transformers-based narrative sentiment/emotion arcs for literature (syuzhet-like)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Tic and Tac" }]
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "sentencepiece",
  "transformers>=4.40",
  "torch",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5"]
transformers = ["transformers>=4.40", "torch", "sentencepiece"]

[tool.hatch.build.targets.wheel]
packages = ["src/fabula"]

[tool.ruff]
line-length = 100

[project.scripts]
fabula = "fabula.cli:main"


[tool.pytest.ini_options]
pythonpath = ["src"]
